# warpwallet

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
crates/: Cargo.toml  README.md
crates/bls-ckd/: Cargo.toml  README.md
crates/seed-bindgen/: Cargo.toml  README.md
crates/seed-bindgen/src/: lib.rs
crates/seed-core/: Cargo.toml
crates/seed-ui/: Cargo.toml
crates/seed-ui/wit/: world.wit
docs/: index.html  wallet.js
docs/_app/: version.json
docs/_app/immutable/chunks/: paths.0bdd32c1.js  paths.a3ad01e9.js  paths.c43bc45e.js  singletons.05154e41.js  singletons.3c29d2db.js  singletons.70d95026.js  singletons.98f11f18.js  singletons.cb35e138.js
docs/_app/immutable/entry/: app.06c57af5.js  app.5c10e9dc.js  app.73167aaa.js  app.7df678f4.js  app.ecdecf01.js  start.1d7eec3a.js  start.a8f7f785.js  start.b9011fe3.js  start.cf950ca2.js  start.fe7098cd.js
docs/_app/immutable/nodes/: 0.14b5a184.js  0.37985e00.js  0.5043ad2b.js  0.62fe1a32.js  1.0665c062.js  1.2db144ad.js  1.600a5a1b.js  1.a57854ee.js  1.e9833f37.js  2.51273850.js  2.60f519b2.js  2.82b2df3c.js
src/routes/: +layout.svelte  +page.svelte  app.js
static/: _app.js
static/assets/: worker-85623606.js
wallet/: README.md  index.html  package-lock.json  package.json  template.js  tsconfig.json  vite.config.ts
wallet/src/: App.svelte
wallet/src/lib/: Pin.svelte  Progress.svelte  poster.js  wasm.js  worker.js
